--- a/vue-project/index.html
+++ b/vue-project/index.html
@@ -1,32 +1,1 @@
-<!doctype html>
-<html lang="">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <!--[if IE]><link rel="icon" href="/ToDo-VUE-project/favicon.ico"><![endif]-->
-    <title>vue-project</title>
-    <script defer="defer" src="/ToDo-VUE-project/js/chunk-vendors.33a6366d.js"></script>
-    <script defer="defer" src="/ToDo-VUE-project/js/app.619c4b75.js"></script>
-    <link href="/ToDo-VUE-project/css/app.63237876.css" rel="stylesheet">
-    <link rel="icon" type="image/svg+xml" href="/ToDo-VUE-project/img/icons/favicon.svg">
-    <link rel="icon" type="image/png" sizes="32x32" href="/ToDo-VUE-project/img/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/ToDo-VUE-project/img/icons/favicon-16x16.png">
-    <link rel="manifest" href="/ToDo-VUE-project/manifest.json">
-    <meta name="theme-color" content="#4DBA87">
-    <meta name="apple-mobile-web-app-capable" content="no">
-    <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <meta name="apple-mobile-web-app-title" content="vue-project">
-    <link rel="apple-touch-icon" href="/ToDo-VUE-project/img/icons/apple-touch-icon-152x152.png">
-    <link rel="mask-icon" href="/ToDo-VUE-project/img/icons/safari-pinned-tab.svg" color="#4DBA87">
-    <meta name="msapplication-TileImage" content="/ToDo-VUE-project/img/icons/msapplication-icon-144x144.png">
-    <meta name="msapplication-TileColor" content="#000000">
-</head>
-
-<body><noscript><strong>We're sorry but vue-project doesn't work properly without JavaScript enabled. Please enable it
-            to continue.</strong></noscript>
-    <div id="app"></div>
-</body>
-
-</html>
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><!--[if IE]><link rel="icon" href="/ToDo-VUE-project/favicon.ico"><![endif]--><title>vue-project</title><script defer="defer" src="/ToDo-VUE-project/js/chunk-vendors.33a6366d.js"></script><script defer="defer" src="/ToDo-VUE-project/js/app.dedfffb1.js"></script><link href="/ToDo-VUE-project/css/app.63237876.css" rel="stylesheet"><link rel="icon" type="image/svg+xml" href="/ToDo-VUE-project/img/icons/favicon.svg"><link rel="icon" type="image/png" sizes="32x32" href="/ToDo-VUE-project/img/icons/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="/ToDo-VUE-project/img/icons/favicon-16x16.png"><link rel="manifest" href="/ToDo-VUE-project/manifest.json"><meta name="theme-color" content="#4DBA87"><meta name="apple-mobile-web-app-capable" content="no"><meta name="apple-mobile-web-app-status-bar-style" content="default"><meta name="apple-mobile-web-app-title" content="vue-project"><link rel="apple-touch-icon" href="/ToDo-VUE-project/img/icons/apple-touch-icon-152x152.png"><link rel="mask-icon" href="/ToDo-VUE-project/img/icons/safari-pinned-tab.svg" color="#4DBA87"><meta name="msapplication-TileImage" content="/ToDo-VUE-project/img/icons/msapplication-icon-144x144.png"><meta name="msapplication-TileColor" content="#000000"></head><body><noscript><strong>We're sorry but vue-project doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
