--- a/vue-project/index.html
+++ b/vue-project/index.html
@@ -9,7 +9,7 @@
     <title>vue-project</title>
     <script defer="defer" src="/VueJS-TodoApp/js/chunk-vendors.33a6366d.js"></script>
     <script defer="defer" src="/VueJS-TodoApp/js/app.fe5efcfd.js"></script>
-    <link href="/VueJS-TodoApp/css/app.63237876.css" rel="stylesheet">
+    <link href="app.63237876.css" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="/VueJS-TodoApp/img/icons/favicon.svg">
     <link rel="icon" type="image/png" sizes="32x32" href="/VueJS-TodoApp/img/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/VueJS-TodoApp/img/icons/favicon-16x16.png">
